# gitops-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: mirror.yml  release.yml
src/: main.rs  utils.rs
src/ops/: caddy.rs  hugo.rs  sync.rs
