[package]
name = "gitops-cli"
authors = ["29 <791603901@qq.com>"]
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
fs_extra = "1.3.0"
opendal = { version = "0.49.2", features = ["layers-mime-guess", "services-oss"] }
pushover-rs = "0.3.18"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
sysinfo = { version = "0.31.4", default-features = false, features = ["system"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
nu-ansi-term = "0.50.1"
windows-service = "0.7.0"
zip = "2.2.0"

[target.'cfg(not(windows))'.dependencies]
flate2 = "1.0.33"
tar = "0.4.41"
